--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,7 @@ XPLM301 = ["XPLM300"]
 XPLM300 = ["XPLM210"]
 XPLM210 = ["XPLM200"]
 XPLM200 = []
+
+[package.metadata.docs.rs]
+features = ["XPLM400"]
+targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
