--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,6 +15,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build
-      run: cargo build --verbose
+      run: cargo build -F XPLM400 --verbose
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test -F XPLM400 --verbose
