--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "xplane-sys"
-version = "4.0.102"
+version = "4.0.103"
 authors = ["Julia DeMille <me@jdemille.com>"]
 description = "Low-level bindings for the X-Plane plugin SDK"
 repository = "https://github.com/judemille/xplane-sys"
@@ -30,7 +30,7 @@ fmod = []
 mockall = ["dep:mockall"]
 
 [package.metadata.docs.rs]
-features = ["XPLM400"]
+features = ["XPLM400", "fmod"]
 targets = [
     "x86_64-unknown-linux-gnu",
     "x86_64-apple-darwin",
