--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ build = "build.rs"
 edition = "2021"
 
 [dependencies]
+bitfield = "0.14"
 mockall = { version = "0.11", optional = true }
 
 [build-dependencies]
