Fix repo in Cargo.toml.
Signed-off-by: Julia DeMille <me@jdemille.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "xplane-sys"
 version = "4.0.103"
 authors = ["Julia DeMille <me@jdemille.com>"]
 description = "Low-level bindings for the X-Plane plugin SDK"
-repository = "https://github.com/judemille/xplane-sys"
+repository = "https://git.sr.ht/~jdemille/xplane-sys"
 readme = "README.md"
 keywords = ["X-Plane", "plugin"]
 categories = ["external-ffi-bindings"]
