--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,5 +21,7 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: true
       - name: Build
-        run: cargo build -F XPLM400 --verbose
+        run: cargo build -F XPLM400 -Fstub-linux --verbose
